# niccle

./: .taplo.toml  Cargo.toml  README.md  check.sh  docs.sh  fix.sh  rust-toolchain.toml
.cargo/: config.toml
esp/: Cargo.toml
esp/examples/: arp_request.rs  cycle_counting.rs  simple_signal_integrity_check.rs  smoltcp_http_get.rs  smoltcp_ping.rs
esp/ld/: place_hot_functions_in_ram.x
esp/pcaps/: smoltcp_http_get_after_code_in_ram.stdout.txt  smoltcp_http_get_after_optimizations.stdout.txt  smoltcp_http_get_before_optimizations.stdout.txt
esp/src/: debug_util.rs  eth_phy.rs  eth_phy_dedicated_io.rs  lib.rs  main.rs
esp/testdata/: 100kB.txt  10kB.txt  1MB.txt  3MB.txt  calculate_crc32.py  serve_testdata.py
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs
src/: debug_util.rs  eth_mac.rs  example_data.rs  lib.rs
src/eth_mac/: mod.rs  smoltcp.rs
