[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "niccle"
readme = "README.md"
version = "0.1.0"

[workspace]
members = ["esp", "proc_macros"]

[workspace.package]
authors = ["Timon Van Overveldt <reachme@timonvo.com>"]
edition = "2021"
license = "Apache-2.0"

[lib]
# We don't have any tests or benchmarks yet, and this silences the 'can't find crate for `test`'
# warning from `cargo fix --all-targets` in that case.
bench = false

[workspace.dependencies]
byteorder = { version = "1.5.0", default-features = false }
critical-section = "1.1.2"
log = "0.4.20"
smoltcp = { version = "0.11.0", default-features = false, features = [
  "log",
  "medium-ethernet",
  "proto-dhcpv4",
  "proto-dns",
  "proto-igmp",
  "proto-ipv4",
  "proto-ipv4-fragmentation",
  "proto-ipv6",
  "socket",
  "socket-dhcpv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }

[dependencies]
bitvec = { version = "1.0.1", default-features = false }
byteorder = { workspace = true }
crc32fast = { version = "1.3.2", default-features = false }
critical-section = { workspace = true }
log = { workspace = true }
smoltcp = { workspace = true }
thingbuf = { version = "0.1.4", default-features = false, features = [
  "static",
] }
